
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_13__ TYPE_4__ ;
typedef struct TYPE_12__ TYPE_3__ ;
typedef struct TYPE_11__ TYPE_2__ ;
typedef struct TYPE_10__ TYPE_1__ ;


typedef scalar_t__ int64_t ;
struct TYPE_13__ {scalar_t__ end; scalar_t__ start; int metadata; int time_base; int id; } ;
struct TYPE_12__ {int nb_chapters; TYPE_4__** chapters; } ;
struct TYPE_11__ {scalar_t__ ts_offset; TYPE_3__* ctx; } ;
struct TYPE_10__ {scalar_t__ start_time; scalar_t__ recording_time; TYPE_3__* ctx; } ;
typedef TYPE_1__ OutputFile ;
typedef TYPE_2__ InputFile ;
typedef TYPE_3__ AVFormatContext ;
typedef TYPE_4__ AVChapter ;


 int AVERROR (int ) ;
 scalar_t__ AV_NOPTS_VALUE ;
 int AV_TIME_BASE_Q ;
 int ENOMEM ;
 scalar_t__ FFMAX (int ,scalar_t__) ;
 scalar_t__ FFMIN (scalar_t__,scalar_t__) ;
 scalar_t__ INT64_MAX ;
 int av_dict_copy (int *,int ,int ) ;
 TYPE_4__* av_mallocz (int) ;
 TYPE_4__** av_realloc_f (TYPE_4__**,int,int) ;
 scalar_t__ av_rescale_q (scalar_t__,int ,int ) ;

__attribute__((used)) static int copy_chapters(InputFile *ifile, OutputFile *ofile, int copy_metadata)
{
    AVFormatContext *is = ifile->ctx;
    AVFormatContext *os = ofile->ctx;
    AVChapter **tmp;
    int i;

    tmp = av_realloc_f(os->chapters, is->nb_chapters + os->nb_chapters, sizeof(*os->chapters));
    if (!tmp)
        return AVERROR(ENOMEM);
    os->chapters = tmp;

    for (i = 0; i < is->nb_chapters; i++) {
        AVChapter *in_ch = is->chapters[i], *out_ch;
        int64_t start_time = (ofile->start_time == AV_NOPTS_VALUE) ? 0 : ofile->start_time;
        int64_t ts_off = av_rescale_q(start_time - ifile->ts_offset,
                                       AV_TIME_BASE_Q, in_ch->time_base);
        int64_t rt = (ofile->recording_time == INT64_MAX) ? INT64_MAX :
                           av_rescale_q(ofile->recording_time, AV_TIME_BASE_Q, in_ch->time_base);


        if (in_ch->end < ts_off)
            continue;
        if (rt != INT64_MAX && in_ch->start > rt + ts_off)
            break;

        out_ch = av_mallocz(sizeof(AVChapter));
        if (!out_ch)
            return AVERROR(ENOMEM);

        out_ch->id = in_ch->id;
        out_ch->time_base = in_ch->time_base;
        out_ch->start = FFMAX(0, in_ch->start - ts_off);
        out_ch->end = FFMIN(rt, in_ch->end - ts_off);

        if (copy_metadata)
            av_dict_copy(&out_ch->metadata, in_ch->metadata, 0);

        os->chapters[os->nb_chapters++] = out_ch;
    }
    return 0;
}
